@startuml

title __JAVAFX-ON-PI's Class Diagram__\n

  namespace sample {
    class sample.BackgroundUpdater {
    }
  }
  

  namespace sample {
    class sample.Constants {
    }
  }
  

  namespace sample {
    class sample.CustomVBox {
    }
  }
  

  namespace sample {
    class sample.Machine {
    }
  }
  

  namespace sample {
    class sample.MachineMicrocontrolerHelper {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.ScannerHelper {
    }
  }
  

  namespace sample {
    class sample.SceneError {
    }
  }
  

  namespace sample {
    class sample.SceneHome {
    }
  }
  

  namespace sample {
    class sample.SceneOrderCompleted {
    }
  }
  

  namespace sample {
    class sample.SceneProcessingOrder {
    }
  }
  

  namespace sample {
    class sample.SceneReceiveOrder {
    }
  }
  

  namespace sample {
    class sample.ServerHelper {
    }
  }
  

  sample.CustomVBox -up-|> javafx.scene.layout.VBox
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
